@startuml Diagrama Base de Datos - Sistema UML Colaborativo con IA

!define TABLE(x) class x << (T,#FFAAAA) >>
!define PRIMARY_KEY(x) <b>x</b>
!define FOREIGN_KEY(x) <i>x</i>

skinparam classAttributeIconSize 0
skinparam linetype ortho

' ============================================
' TABLAS PRINCIPALES
' ============================================

TABLE(usuario) {
  PRIMARY_KEY(+id_usuario: SERIAL)
  --
  email: VARCHAR(255) UNIQUE
  password: VARCHAR(255)
  fecha_creacion: TIMESTAMP
}

TABLE(sala) {
  PRIMARY_KEY(+id_sala: SERIAL)
  --
  nombre_sala: VARCHAR(255) UNIQUE
  FOREIGN_KEY(#host_sala: VARCHAR(255))
  informacion: TEXT
  fecha_creacion: TIMESTAMP
}

TABLE(asistencia) {
  PRIMARY_KEY(+id_asistencia: SERIAL)
  --
  FOREIGN_KEY(#id_usuario: INTEGER)
  FOREIGN_KEY(#id_sala: INTEGER)
  fecha_hora: TIMESTAMP
}

' ============================================
' CHAT CON IA
' ============================================

TABLE(conversacion_ia) {
  PRIMARY_KEY(+id_conversacion: SERIAL)
  --
  FOREIGN_KEY(#id_sala: INTEGER)
  titulo: VARCHAR(500)
  contexto_inicial: JSONB
  fecha_creacion: TIMESTAMP
  fecha_ultima_actualizacion: TIMESTAMP
  activa: BOOLEAN
}

TABLE(mensaje_chat_ia) {
  PRIMARY_KEY(+id_mensaje: SERIAL)
  --
  FOREIGN_KEY(#id_conversacion: INTEGER)
  FOREIGN_KEY(#id_usuario: INTEGER)
  tipo_mensaje: VARCHAR(20)
  contenido: TEXT
  metadata: JSONB
  tiene_attachments: BOOLEAN
  metadata_multimodal: JSONB
  fecha_envio: TIMESTAMP
}

TABLE(snapshot_diagrama) {
  PRIMARY_KEY(+id_snapshot: SERIAL)
  --
  FOREIGN_KEY(#id_conversacion: INTEGER)
  FOREIGN_KEY(#id_mensaje: INTEGER)
  diagrama_json: JSONB
  descripcion: TEXT
  fecha_creacion: TIMESTAMP
}

TABLE(config_ia) {
  PRIMARY_KEY(+id_config: SERIAL)
  --
  FOREIGN_KEY(#id_sala: INTEGER UNIQUE)
  modelo: VARCHAR(100)
  temperatura: DECIMAL(3,2)
  max_tokens: INTEGER
  system_prompt: TEXT
  configuracion_extra: JSONB
  fecha_creacion: TIMESTAMP
}

' ============================================
' MULTIMODAL
' ============================================

TABLE(mensaje_attachment) {
  PRIMARY_KEY(+id: SERIAL)
  --
  FOREIGN_KEY(#mensaje_id: INTEGER)
  tipo: VARCHAR(20)
  archivo_url: VARCHAR(500)
  archivo_nombre: VARCHAR(255)
  archivo_tamano: INTEGER
  mime_type: VARCHAR(100)
  --
  ' Solo para audio
  transcripcion: TEXT
  duracion_segundos: DECIMAL(10,2)
  servicio_transcripcion: VARCHAR(50)
  --
  ' Solo para imágenes
  ancho: INTEGER
  alto: INTEGER
  analisis_ia: JSONB
  --
  created_at: TIMESTAMP
}

' ============================================
' RELACIONES
' ============================================

' Relaciones de sala
usuario "1" -- "0..*" sala : host_sala
sala "1" -- "0..*" asistencia : participa
usuario "1" -- "0..*" asistencia : asiste

' Relaciones de conversacion_ia
sala "1" -- "0..*" conversacion_ia : tiene
conversacion_ia "1" -- "0..*" mensaje_chat_ia : contiene
usuario "0..1" -- "0..*" mensaje_chat_ia : envía

' Relaciones de snapshot y config
conversacion_ia "1" -- "0..*" snapshot_diagrama : captura
mensaje_chat_ia "0..1" -- "0..*" snapshot_diagrama : asociado
sala "1" -- "0..1" config_ia : configura

' Relaciones multimodales
mensaje_chat_ia "1" -- "0..*" mensaje_attachment : adjunta

note top of usuario
  <b>Tabla Principal</b>
  Almacena usuarios registrados
  en el sistema
end note

note top of conversacion_ia
  <b>Chat IA</b>
  Gestiona conversaciones
  con IA Multimodal (Claude)
end note

note top of mensaje_attachment
  <b>Multimodal</b>
  Soporta audio e imágenes
  con transcripción y análisis IA
end note

@enduml
